--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 
         location /dycblog/ {
-            alias  /home/dyc/dycforever.github.io/draft/;
+            alias  /home/dyc/github/dycforever.github.io/draft/;
             index  index.html index.htm;
         }
