--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 #
 #
-#设置PREFIX为Ctrl-a  
-set -g prefix C-w  
+#设置PREFIX为Ctrl-j  
+set -g prefix C-j
 #解除Ctrl-b与PREFIX的对应关系  
 unbind C-b  
 #copy-mode将快捷键设置为vi模式  
