--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,10 @@
 #
 #
-#设置PREFIX为Ctrl-j  
-set -g prefix C-j
 #解除Ctrl-b与PREFIX的对应关系  
 unbind C-b  
+#设置PREFIX为Ctrl-a  
+set -g prefix C-j
+
 #copy-mode将快捷键设置为vi模式  
 setw -g mode-keys vi  
 #将r键设置为加载配置文件，并显示"reloaded!"信息  
