--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 
-#user  nobody;
+user  dyc;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -44,17 +44,22 @@ http {
     }
 
     server {
+        listen       8715;
+        location / {
+            root /home/dyc/github/web/fake/;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+            include fastcgi_params;
+            include fastcgi.conf;
+            fastcgi_pass fpm;
+        }
+    }
+
+    server {
         listen       8714;
         server_name  localhost;
 
-        #charset koi8-r;
-
         #access_log  logs/host.access.log  main;
-
-        location / {
-            root /home/dyc/github/web/;
-            index   index.html;
-        }
+        root /home/dyc/github/web/;
 
         location /b.html {
             root /home/dyc/github/web/test/;
@@ -76,8 +81,16 @@ http {
             fastcgi_pass fpm;
         }
 
-        #error_page  404              /404.html;
+        location = /lua {
+            content_by_lua 'ngx.say("hello lua")';
+        }
 
+        location / {
+            root /home/dyc/github/web/;
+            index   index.html;
+        }
+
+        error_page  404              /404.html;
         # redirect server error pages to the static page /50x.html
         #
         error_page   500 502 503 504  /50x.html;
@@ -85,55 +98,6 @@ http {
             root   html;
         }
 
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443;
-    #    server_name  localhost;
-
-    #    ssl                  on;
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_timeout  5m;
-
-    #    ssl_protocols  SSLv2 SSLv3 TLSv1;
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers   on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
 
 }
