--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,10 +18,9 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" '
-                      '"$upstream_addr" "$upstream_response_time" "$upstream_status" ';
+    log_format main '$http_x_forwarded_for $remote_addr [$time_local] "$request"'
+                    ' $status $request_time "$host" "$http_referer" "$http_user_agent"'
+                    ' "$upstream_addr" "$upstream_status" "$upstream_response_time"';
 
     access_log  logs/access.log  main;
 
