modify vimrc and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,10 +54,13 @@ set-option -g status on
 #状态栏操作使用vi风格的按键，比如命令提示
 set-option -g status-keys vi
 
-set-option -g mode-mouse on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
+# for version < 2.1
+#set-option -g mode-mouse on
+#set-option -g mouse-resize-pane on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
 
 unbind '"'
 bind - splitw -v # 分割成上下两个窗口
