--- a/tmux.conf
+++ b/tmux.conf
@@ -54,8 +54,8 @@ set-option -g status on
 #状态栏操作使用vi风格的按键，比如命令提示
 set-option -g status-keys vi
 
-set -g mouse-utf8 on
-set -g mouse on
+#set -g mouse-utf8 on
+#set -g mouse on
 # for version < 2.1
 #set-option -g mode-mouse on
 #set-option -g mouse-resize-pane on
